Bug 46151 - vba imports incorrect modulename
Summary: vba imports incorrect modulename
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard: target:3.6
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-16 02:28 UTC by Noel Power
Modified: 2012-04-05 08:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-02-16 02:28:33 UTC
the bug document is attached to https://bugzilla.novell.com/show_bug.cgi?id=747323
unfortunately this is a customer document and as such is private ( only viewable by employees ) Unfortunately my attempts to cut the document down to get rid of sensitive info changed things so the problem no longer occurs :-(
Comment 1 Not Assigned 2012-02-16 02:36:18 UTC
Noel Power commited a patch related to this issue to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2174d4d44eeb83378f76ea34086b8a1989b70b76

use stream name for module names when importing vba. fdo#46151 & bnc#747323
Comment 2 Noel Power 2012-02-16 02:42:38 UTC
marking as fixed ( on master/3.6 )
Comment 3 Rainer Bielefeld Retired 2012-04-05 08:05:04 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.