use stream name for module names when importing vba. fdo#46151 & bnc#747323